master - Поправил вывод qr-кода